--- a/next/package.json
+++ b/next/package.json
@@ -19,7 +19,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-force-graph-2d": "^1.23.8"
+    "react-force-graph-2d": "^1.23.8",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "7.31.0",
